--- a/desafio10.css
+++ b/desafio10.css
@@ -34,11 +34,11 @@ header{
     height: 200px;
 }
 header > h1{
-    font-size: 40px;
+    font-size: 2em;
     font-weight: normal;
     text-align: center;
     margin-top: 0%;
-    padding: 20px 30px 0px 20px;
+    padding: 40px 30px 0px 50px;
     font-family: var(--fonte1);
     color: white;
 }
@@ -46,7 +46,7 @@ header > p {
     color: white;
     font-family: var(--fonte0);
     text-align: center;
-    margin-top: -15px;
+    margin-top: 0 px;
     margin-bottom: 0px;
     padding: 0px;
 }
