--- a/desafio10.css
+++ b/desafio10.css
@@ -57,7 +57,9 @@ body{
 }
 #menu {
     padding-top: 0px;
-    margin-top: -19px;
+    padding-bottom: 0px;
+    margin-top: -20px;
+    margin-bottom: 0px;
     text-align: start;
     list-style-type: none;
     color: white;
@@ -85,7 +87,7 @@ main{
     display: block;
     background-color: white;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.438);
-    margin: -15px auto;
+    margin: 1px auto;
 }
 main img {
     width: 100%;
