--- a/desafio10.css
+++ b/desafio10.css
@@ -48,7 +48,7 @@ header > p {
     text-align: center;
     margin-top: 0 px;
     margin-bottom: 0px;
-    padding: 0px;
+    padding: 0px 0px 50px 0px;
 }
 body{
     background-color: rgba(219, 205, 158, 0.815);
